# OpenHawk

./: Cargo.toml  README.md  publish.sh
.github/workflows/: ci.yml
demos/: agents.tape  full_demo.tape  mock_hawk.sh  orchestrate.tape  vault.tape
hawk-bus/: Cargo.toml
hawk-bus/src/: lib.rs
hawk-cli/: Cargo.toml
hawk-cli/src/: main.rs  setup.rs
hawk-compress/: Cargo.toml
hawk-compress/src/: lib.rs
hawk-core/: Cargo.toml
hawk-core/src/: agent_manager.rs  air_gap.rs  config.rs  config_engine.rs  daemon.rs  db.rs  lib.rs  llm_router.rs  manifest.rs  orchestrator.rs  pattern_detector.rs  permission_guard.rs  platform.rs  resource_monitor.rs  self_healer.rs  session_recorder.rs  talon.rs  token_tracker.rs
hawk-core/src/tests/: agent_lifecycle_tests.rs  integration_tests.rs  pattern_detector_tests.rs  self_healer_tests.rs
hawk-memory/: Cargo.toml
hawk-memory/src/: lib.rs
hawk-nest/: Cargo.toml
hawk-nest/src/: lib.rs
hawk-savepoint/: Cargo.toml
hawk-savepoint/src/: lib.rs
hawk-sdk-rust/: Cargo.toml
hawk-sdk-rust/src/: lib.rs
hawk-sync/: Cargo.toml
hawk-sync/src/: lib.rs
hawk-ui/: Cargo.toml
hawk-ui/src/: app.rs  lib.rs  render.rs
hawk-vault/: Cargo.toml
hawk-vault/src/: lib.rs
hawk-verify/: Cargo.toml
hawk-verify/src/: lib.rs
hawk-watch/: Cargo.toml
hawk-watch/src/: lib.rs
openhawk-bus/: Cargo.toml
openhawk-cli/: Cargo.toml
openhawk-cli/src/: main.rs  setup.rs
openhawk-core/: Cargo.toml
openhawk-core/src/: agent_manager.rs  config.rs  config_engine.rs  daemon.rs  db.rs  error.rs  orchestrator.rs  pattern_detector.rs  platform.rs  resource_monitor.rs  self_healer.rs  session_recorder.rs  types.rs
openhawk-core/src/tests/: agent_lifecycle_tests.rs  mod.rs  self_healer_tests.rs
openhawk-memory/: Cargo.toml
openhawk-memory/src/: lib.rs
openhawk-nest/: Cargo.toml
openhawk-nest/src/: lib.rs
openhawk-savepoint/: Cargo.toml
openhawk-savepoint/src/: lib.rs
openhawk-sdk-rust/: Cargo.toml
openhawk-ui/: Cargo.toml
openhawk-ui/src/: app.rs  render.rs  tests.rs
openhawk-vault/: Cargo.toml
openhawk-verify/src/: lib.rs
