[workspace]
members = [
    "hawk-bus",
    "hawk-cli",
    "hawk-compress",
    "hawk-core",
    "hawk-memory",
    "hawk-nest",
    "hawk-savepoint",
    "hawk-sdk-rust",
    "hawk-sync",
    "hawk-ui",
    "hawk-vault",
    "hawk-verify",
    "hawk-watch",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
dirs-next = "2.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
aes-gcm = "0.10"
argon2 = "0.5"
keyring = "2"
rand = "0.8"
glob = "0.3"
sysinfo = "0.30"
nix = { version = "0.27", features = ["signal", "process"] }
ratatui = "0.26"
crossterm = "0.27"
