[workspace]
members = [
    "openhawk-bus",
    "openhawk-cli",
    "openhawk-compress",
    "openhawk-core",
    "openhawk-memory",
    "openhawk-nest",
    "openhawk-savepoint",
    "openhawk-sdk-rust",
    "openhawk-sync",
    "openhawk-ui",
    "openhawk-vault",
    "openhawk-verify",
    "openhawk-watch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ojuschugh1"]
license = "MIT"
repository = "https://github.com/ojuschugh1/openhawk"
homepage = "https://github.com/ojuschugh1/openhawk"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
dirs-next = "2.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
aes-gcm = "0.10"
argon2 = "0.5"
keyring = "2"
rand = "0.8"
glob = "0.3"
sysinfo = "0.30"
nix = { version = "0.27", features = ["signal", "process"] }
libc = "0.2"
ratatui = "0.26"
crossterm = "0.27"
