[package]
name = "hawk-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JSON-RPC message bus for inter-agent communication in OpenHawk"
keywords = ["agent", "bus", "ipc", "jsonrpc", "ai"]
categories = ["asynchronous", "network-programming"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
