[package]
name = "hawk-compress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Token compression layer for LLM context — wraps sqz for OpenHawk agents"
keywords = ["llm", "tokens", "compression", "sqz", "ai"]
categories = ["compression", "command-line-utilities"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
