[package]
name = "hawk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
dirs-next = { workspace = true }
glob = "0.3"
sysinfo = "0.30"
sha2 = { workspace = true }
hex = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
hawk-bus = { path = "../hawk-bus" }
