[package]
name = "hawk-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Persistent cross-session memory store for OpenHawk agents — wraps aura"
keywords = ["memory", "agent", "ai", "aura", "storage"]
categories = ["database", "command-line-utilities"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
