[package]
name = "hawk-nest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Package registry client for the HawkNest agent marketplace"
keywords = ["agent", "registry", "marketplace", "ai", "packages"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
