[package]
name = "hawk-savepoint"
version = "0.1.0"
edition = "2021"

[dependencies]
hawk-core = { path = "../hawk-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
