[package]
name = "hawk-savepoint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Copy-on-write filesystem snapshots and rollback for OpenHawk agents"
keywords = ["snapshot", "rollback", "agent", "filesystem", "ai"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
hawk-core = { path = "../hawk-core", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
