[package]
name = "openhawk-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cross-device sync with conflict resolution for OpenHawk agent state"
keywords = ["sync", "agent", "crdt", "ai", "distributed"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
