[package]
name = "hawk-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
hawk-core = { path = "../hawk-core" }
hawk-savepoint = { path = "../hawk-savepoint" }
dirs-next = { workspace = true }
