[package]
name = "hawk-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
hawk-core = { path = "../hawk-core" }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = "3"
