[package]
name = "hawk-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AES-256-GCM encrypted secrets vault for OpenHawk agents"
keywords = ["vault", "secrets", "encryption", "keychain", "ai"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
hawk-core = { path = "../hawk-core", version = "0.1.0" }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = "3"
