[package]
name = "hawk-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent claim verification engine — wraps claimcheck for OpenHawk sessions"
keywords = ["verification", "agent", "claims", "ai", "audit"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
