[package]
name = "openhawk-watch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "API drift and phantom dependency detection for OpenHawk — wraps ghostdep and etch"
keywords = ["drift", "dependencies", "agent", "ghostdep", "ai"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
