[package]
name = "openhawk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OpenHawk Agent OS — manage AI agents as real OS processes"
keywords = ["agent", "ai", "cli", "os", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "openhawk"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hawk-core    = { path = "../openhawk-core",     version = "0.1.0", package = "openhawk-core" }
hawk-savepoint = { path = "../openhawk-savepoint", version = "0.1.0", package = "openhawk-savepoint" }
hawk-vault   = { path = "../openhawk-vault",    version = "0.1.0", package = "openhawk-vault" }
serde_json = { workspace = true }
rusqlite = { workspace = true }
hawk-bus     = { path = "../openhawk-bus",      version = "0.1.0", package = "openhawk-bus" }
hawk-verify  = { path = "../openhawk-verify",   version = "0.1.0", package = "openhawk-verify" }
hawk-compress = { path = "../openhawk-compress", version = "0.1.0", package = "openhawk-compress" }
hawk-watch   = { path = "../openhawk-watch",    version = "0.1.0", package = "openhawk-watch" }
dirs-next = { workspace = true }
hawk-ui      = { path = "../openhawk-ui",       version = "0.1.0", package = "openhawk-ui" }
hawk-sdk-rust = { path = "../openhawk-sdk-rust", version = "0.1.0", package = "openhawk-sdk" }
hawk-nest    = { path = "../openhawk-nest",     version = "0.1.0", package = "openhawk-nest" }
hawk-sync    = { path = "../openhawk-sync",     version = "0.1.0", package = "openhawk-sync" }
