[package]
name = "openhawk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core runtime for OpenHawk Agent OS — agent lifecycle, orchestration, config, healing"
keywords = ["agent", "orchestration", "ai", "runtime", "os"]
categories = ["command-line-utilities", "asynchronous"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
dirs-next = { workspace = true }
glob = "0.3"
sysinfo = "0.30"
sha2 = { workspace = true }
hex = { workspace = true }
hawk-bus = { path = "../openhawk-bus", version = "0.1.0", package = "openhawk-bus" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
