[package]
name = "openhawk-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal UI dashboard for monitoring OpenHawk agents in real time"
keywords = ["tui", "agent", "dashboard", "ratatui", "ai"]
categories = ["command-line-interface", "visualization"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
hawk-core = { path = "../openhawk-core", version = "0.1.0", package = "openhawk-core" }
hawk-savepoint = { path = "../openhawk-savepoint", version = "0.1.0", package = "openhawk-savepoint" }
dirs-next = { workspace = true }
